# lifecycle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile
docs/source/: api.rst  concepts.rst  conf.py  contributing.rst  core.rst  exceptions.rst  exceptions_diagram.rst  extending.rst  faq.rst  groups.rst  hooks.rst  index.rst  installation.rst  lifecycle_types.rst  quickstart.rst
docs/source/_templates/: layout.html
examples/: basic_usage.py  complex_scenario.py  custom_hooks.py  dependencies.py  error_handling.py  groups.py  one_group_example.py
src/lifecycle/: __init__.py  core.py  exceptions.py  groups.py  hooks.py  lifecycle_types.py
tests/: conftest.py  test_core.py  test_exceptions.py  test_groups.py  test_hooks.py  test_integration.py  test_lifecycle_types.py
